Fix: Aligned Cancel button with the Save button on Create Course page

--- a/css/default.css
+++ b/css/default.css
@@ -360,7 +360,7 @@ nav a:hover .iconPlus{
 	border: 1px solid #e7e7e7;
 	color: #444444;
 	margin-right: 10px;
-	margin-top:9px;
+	margin-top: 10px;
 	background-color: #efefef;
 }
 .button-small {
